# adventofcode2021

./: pyproject.toml
.devcontainer/: Dockerfile
cookiecutter/{{ cookiecutter.project_slug }}/: test.py
scripts/: __main__.py
src/: util.py
src/day1/: __main__.py  test.py
src/day10/: __main__.py  test.py
src/day11/: __main__.py  test.py
src/day2/: __main__.py  test.py
src/day3/: __main__.py  test.py
src/day4/: test.py
src/day5/: test.py
src/day6/: test.py
src/day7/: test.py
src/day8/: __main__.py  test.py
src/day9/: __main__.py  test.py
