[tool.poetry]
name = "adventofcode2021"
version = "0.1.0"
description = ""
authors = ["nzdjb <github@2a1b.com>"]
packages = [
  { include = "scripts" }
]

[tool.poetry.dependencies]
python = "3.10"
numpy = "^1.21.4"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
cookiecutter = "^1.7.3"

[tool.poetry.scripts]
test = 'scripts.__main__:unittest'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
