[tool.poetry]
name = "adventofcode2021"
version = "0.1.0"
description = ""
authors = ["nzdjb <github@2a1b.com>"]
packages = [
  { include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^1.3.4"

[tool.poetry.scripts]
test = 'scripts.__main__:unittest'

[tool.poetry.group.dev.dependencies]
cookiecutter = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
